fix gap in button-wrapper

--- a/src/components/ListTask/styles.sass
+++ b/src/components/ListTask/styles.sass
@@ -1,3 +1,7 @@
+.button-wrapper
+  display: flex
+  gap: 10px
+
 .delete-task
   width: 40px
   height: 35px
